...
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="150dp"
            android:gravity="center">

            <EditText
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:hint="Email Address or Username"
                android:inputType="textEmailAddress"
                tools:layout_editor_absoluteX="100dp"
...
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="210dp"
            android:gravity="center">

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:ems="15"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="100dp"
...
