...
        <ImageButton
            android:id="@+id/stopButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_media_pause"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/playButton"
            tools:layout_editor_absoluteY="0dp" />

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...
